Wrote tests for MallobClientOutputWatcher. Fixed errors in other tests.